// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GiExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GiExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One"
      key="One"
    />
    <GifGrid
      category="Two"
      key="Two"
    />
  </ol>
</Fragment>
`;
